--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,11 @@
 @import 'tailwindcss';
 @import 'prettier';
 @import 'prettier-plugin-tailwindcss';
+
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
