--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,5 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
-@import 'prettier';
-@import 'prettier-plugin-tailwindcss';
+@import "tailwindcss";
 
-@tailwind base;
-@tailwind components;
 @tailwind utilities;
+
+
