WIP header > added quasar + component for header part

--- a/src/style.css
+++ b/src/style.css
@@ -56,8 +56,8 @@ html {
 
 @font-face {
     font-family: 'Sixtyfour';
-    font-style: evenly;
-  src: url('../src/assets/fonts/Sixtyofour.ttf') format('truetype');
+    font-style: normal;
+  src: url('../src/assets/fonts/Sixtyfour.ttf') format('truetype');
 }
 
 
@@ -76,7 +76,7 @@ h1, h2, h3, h4, h5, h6, p, span {
 
 h1 {
   font-family: 'Sixtyfour', sans-serif;
-  font-weight: 600;
+  font-weight: 100;
   font-size: 6.875rem;
   text-shadow: var(--color-shadow) .05em 0 20px;;
   text-transform: uppercase;
