--- a/src/style.css
+++ b/src/style.css
@@ -72,6 +72,7 @@ body {
 h1, h2, h3, h4, h5, h6, p, span {
   font-family: 'Albert Sans', sans-serif;
   color: var(--color-yellow);
+  line-height: auto;
 }
 
 h1 {
